<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_latest_videos"
        android:icon="@drawable/ic_home_purpule_24dp"
        android:title="@string/latest_videos" />

    <item
        android:id="@+id/navigation_entertainment"
        android:icon="@drawable/trending"
        android:title="@string/entertainment_and_comedy" />

    <item
        android:id="@+id/navigation_latest_news"
        android:icon="@drawable/signin"
        android:title="@string/latest_news" />

    <item
        android:id="@+id/navigation_women"
        android:icon="@drawable/ic_notifications_purpule_24dp"
        android:title="@string/women_s_special" />

    <item
        android:id="@+id/navigation_suggested"
        android:icon="@drawable/reward"
        android:title="@string/suggested_for_you" />

</menu>