<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.VideoUploadScreen">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBase"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_150"
        android:alpha="0.6"
        android:background="@drawable/signin_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_white_24dp"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancelUploadText"
        style="@style/text_view_12_style"
        android:textColor="@color/white"
        android:visibility="gone"
        android:padding="@dimen/margin_5"
        android:background="@color/black_trans_50"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/cancel_uploading"
        app:layout_constraintBottom_toBottomOf="@+id/imageBase"
        app:layout_constraintEnd_toEndOf="@+id/imageBase" />

    <LinearLayout
        android:id="@+id/uploadVideoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageBase"
        app:layout_constraintEnd_toEndOf="@+id/imageBase"
        app:layout_constraintStart_toStartOf="@+id/imageBase"
        app:layout_constraintTop_toTopOf="@+id/imageBase"
        app:layout_constraintVertical_bias="0.7">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/uploadIcon"
            android:layout_width="@dimen/margin_50"
            android:layout_height="@dimen/margin_50"
            app:srcCompat="@drawable/ic_file_upload_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_view_14_style"
            android:id="@+id/uploadText"
            android:layout_width="wrap_content"
            android:text="@string/upload_video"
            android:textColor="@color/white" />


    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/margin_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBase">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input_style"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    style="@style/edit_text_style"
                    android:hint="@string/title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/keywordEditText"
                    style="@style/edit_text_style"
                    android:hint="@string/keywords_for_search"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    style="@style/edit_text_style"
                    android:hint="@string/description"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryEditText"
                    style="@style/edit_text_style"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:focusable="false"
                    android:hint="@string/select_category"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/channelEditText"
                    style="@style/edit_text_style"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:focusable="false"
                    android:hint="@string/select_channel"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlistEditText"
                    style="@style/edit_text_style"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:focusable="false"
                    android:hint="@string/select_playlist"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/statusEditText"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:hint="@string/status"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addThumbText"
                    style="@style/text_view_14_style"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/thumbImage"
                    android:layout_toLeftOf="@+id/thumbImage"
                    android:gravity="center"
                    android:text="@string/add_thumbnail"
                    android:textColor="@color/purpule"
                    android:textSize="@dimen/text_16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/thumbImage"
                    android:layout_width="@dimen/margin_150"
                    android:layout_height="@dimen/margin_100"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/light_gray"
                    android:scaleType="fitXY"
                    android:layout_marginEnd="@dimen/margin_10" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_40"
                    android:id="@+id/imageIcon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/addThumbText"
                    android:layout_toRightOf="@+id/addThumbText"
                    android:src="@drawable/image_icon" />


            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/commentCheckBox"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/allow_comments" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/likeCheckBox"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/allow_likes" />

            <Button
                android:id="@+id/btnPublish"
                style="@style/button_style"
                android:layout_marginTop="@dimen/margin_30"
                android:alpha="0.5"
                android:enabled="false"
                android:text="@string/publish" />


        </LinearLayout>

    </ScrollView>

    <com.app.addviu.data.helper.CircleProgressBar xmlns:cpb="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:layout_width="@dimen/margin_80"
        android:layout_height="@dimen/margin_80"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageBase"
        app:layout_constraintEnd_toEndOf="@+id/imageBase"
        app:layout_constraintStart_toStartOf="@+id/imageBase"
        app:layout_constraintTop_toTopOf="@+id/imageBase"
        app:layout_constraintVertical_bias="0.7"
        cpb:backgroundColor="@color/white"
        cpb:backgroundWidth="8"
        cpb:maxValue="100"
        cpb:prefix=""
        cpb:progressColor="@color/purpule"
        cpb:progressTextColor="@color/white"
        cpb:roundedCorners="true"
        cpb:suffix="%"
        cpb:textSize="@dimen/text_14" />


</androidx.constraintlayout.widget.ConstraintLayout>