<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input_style"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    style="@style/edit_text_style"
                    android:hint="Channel Name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addThumbText"
                    style="@style/text_view_14_style"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/thumbImage"
                    android:layout_toLeftOf="@+id/thumbImage"
                    android:gravity="center"
                    android:text="@string/channel_image"
                    android:textColor="@color/purpule"
                    android:textSize="@dimen/text_16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/thumbImage"
                    android:layout_width="@dimen/margin_150"
                    android:layout_height="@dimen/margin_100"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/light_gray"
                    android:scaleType="fitXY"
                    android:layout_marginEnd="@dimen/margin_10" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_40"
                    android:id="@+id/imageIcon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/addThumbText"
                    android:layout_toRightOf="@+id/addThumbText"
                    android:src="@drawable/image_icon" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/text_input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryEditText"
                    style="@style/edit_text_style"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_purple_36dp"
                    android:focusable="false"
                    android:hint="@string/select_category"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desEditText"
                    style="@style/edit_text_style"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:text="CREATE CHANNEL"
                android:layout_marginTop="@dimen/margin_30"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/margin_10"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>